[lworld] C2 compilation crashes with SIGSEGV in AddPNode::Value

XMLWordPrintable

      # SIGSEGV (0xb) at pc=0x0000000103c37fdf, pid=54750, tid=41475
      #
      # JRE version: Java(TM) SE Runtime Environment (16.0) (fastdebug build 16-lworld3ea+0-2020-08-19-1447289.tobias.hartmann.valhallaint)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 16-lworld3ea+0-2020-08-19-1447289.tobias.hartmann.valhallaint, compiled mode, sharing, tiered, compressed oops, g1 gc, bsd-amd64)
      # Problematic frame:
      # V [libjvm.dylib+0x237fdf] AddPNode::Value(PhaseGVN*) const+0x14f

      Current CompileTask:
      C2: 4681 1118 !b 4 compiler.valhalla.inlinetypes.TestArrays::test84_verifier (84 bytes)

      Stack: [0x000070000a476000,0x000070000a576000], sp=0x000070000a572020, free space=1008k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.dylib+0x237fdf] AddPNode::Value(PhaseGVN*) const+0x14f
      V [libjvm.dylib+0xec9b30] PhaseGVN::transform_no_reclaim(Node*)+0x150
      V [libjvm.dylib+0x7b215d] GraphKit::load_object_klass(Node*)+0x8d
      V [libjvm.dylib+0x7bda16] GraphKit::type_check_receiver(Node*, ciKlass*, float, Node**)+0x46
      V [libjvm.dylib+0x4243b3] PredictedCallGenerator::generate(JVMState*)+0x173
      V [libjvm.dylib+0x63c5c7] Parse::do_call()+0xcf7
      V [libjvm.dylib+0xeafc37] Parse::do_one_bytecode()+0x1a7
      V [libjvm.dylib+0xe98b6e] Parse::do_one_block()+0x42e
      V [libjvm.dylib+0xe96ac7] Parse::do_all_blocks()+0x3c7
      V [libjvm.dylib+0xe91fc4] Parse::Parse(JVMState*, ciMethod*, float)+0x10e4
      V [libjvm.dylib+0x41fad4] ParseGenerator::generate(JVMState*)+0xa4
      V [libjvm.dylib+0x422692] LateInlineCallGenerator::do_late_inline()+0x13f2
      V [libjvm.dylib+0x546ad5] Compile::inline_incrementally_one()+0xd5
      V [libjvm.dylib+0x546f62] Compile::inline_incrementally(PhaseIterGVN&)+0x272
      V [libjvm.dylib+0x53d52b] Compile::Optimize()+0x2db
      V [libjvm.dylib+0x53b2fc] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0x144c
      V [libjvm.dylib+0x41e539] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x1c9
      V [libjvm.dylib+0x55b9e9] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x709
      V [libjvm.dylib+0x55afec] CompileBroker::compiler_thread_loop()+0x34c
      V [libjvm.dylib+0x10c93e3] JavaThread::thread_main_inner()+0x2a3
      V [libjvm.dylib+0x10c4577] Thread::call_run()+0x1b7
      V [libjvm.dylib+0xe6642f] thread_native_entry(Thread*)+0x15f
      C [libsystem_pthread.dylib+0x3661] _pthread_body+0x154
      C [libsystem_pthread.dylib+0x350d] _pthread_body+0x0
      C [libsystem_pthread.dylib+0x2bf9] thread_start+0xd

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: