8252110: [lworld] C2 compilation crashes with SIGSEGV in AddPNode::Value